--- a/lab3/movie.css
+++ b/lab3/movie.css
@@ -1,124 +1,150 @@
 /* BODY */
+
 body {
-  background-image: url('background.png');
-  font-size: 8pt;
-  font-family: Verdana, Tahoma;
-  margin: 0;
-  padding: 0;
+    background-image: url('background.png');
+    font-size: 8pt;
+    font-family: Verdana, Tahoma;
+    margin: 0;
+    padding: 0;
 }
+
 
 /* BANNER PART */
+
 #banner {
-  background-image: url('bannerbg.png');
-  background-repeat: repeat-x;
-  text-align: center;
+    background-image: url('bannerbg.png');
+    background-repeat: repeat-x;
+    text-align: center;
 }
+
 h1 {
-  font-size: 24pt;
-  font-weight: bold;
-  font-family: Tahoma, Verdana;
-  text-align: center;
-  text-shadow: 3px 3px #999999;
+    font-size: 24pt;
+    font-weight: bold;
+    font-family: Tahoma, Verdana;
+    text-align: center;
+    text-shadow: 3px 3px #999999;
 }
+
 
 /* MAIN CONTENT */
+
 .main {
-  width: 800px;
-  height: 1020px;
-  border: 4px gray solid;
-  border-radius: 20px;
-  margin: auto;
-  overflow: hidden;
-  position: relative;
+    width: 800px;
+    height: 1020px;
+    border: 4px gray solid;
+    border-radius: 20px;
+    margin: auto;
+    overflow: hidden;
+    position: relative;
 }
+
 
 /* RATING PART */
+
 #rating {
-  background-image: url('rbg.png');
-  background-repeat: repeat-x;
-  position: relative;
-  float: left;
-  width: 550px;
-  height: 83px;
+    background-image: url('rbg.png');
+    background-repeat: repeat-x;
+    position: relative;
+    float: left;
+    width: 550px;
+    height: 83px;
 }
+
 #rate {
-  font-weight: bold;
-  color: red;
-  font-size: 48pt;
-  position: relative;
-  top: -10px;
+    font-weight: bold;
+    color: red;
+    font-size: 48pt;
+    position: relative;
+    top: -10px;
 }
+
 .side {
-  position: relative;
-  float: right;
+    position: relative;
+    float: right;
 }
+
 
 /* CRITICS PART */
+
 #critics {
-  position: relative;
-  float: right;
-  width: 550px;
+    position: relative;
+    float: right;
+    width: 550px;
 }
+
 .columns {
-  column-count: 2;
-  padding-left: 2%;
-  padding-right: 2%;
-  column-width: 47%;
-  column-gap: 2%;
-  column-span: all;
+    column-count: 2;
+    padding-left: 2%;
+    padding-right: 2%;
+    column-width: 258px;
+    column-gap: 2%;
+    column-span: all;
 }
+
 #break {
-  break-after: column;
+    break-after: column;
 }
+
 q {
-  font-size: 8pt;
-  font-weight: bold;
+    font-size: 8pt;
+    font-weight: bold;
 }
+
 .review {
-  background-color: #e8dc9b;
-  border: 2px gray solid;
-  border-radius: 10px;
-  padding: 8px;
+    background-color: #e8dc9b;
+    border: 2px gray solid;
+    border-radius: 10px;
+    padding: 8px;
 }
+
 .like {
-  float: left;
-  margin: 5px;
+    float: left;
+    margin: 5px;
 }
+
 
 /* OVERVIEW PART */
+
 #overview {
-  width: 250px;
-  background-color: #a2b964;
-  margin-top: -15px;
-  font-size: 8pt;
-  font-family: Arial;
+    width: 250px;
+    background-color: #a2b964;
+    margin-top: -15px;
+    font-size: 8pt;
+    font-family: Arial;
 }
+
 dl {
-  padding: 10pt;
+    padding: 10pt;
 }
+
 dt {
-  font-weight: bold;
-  font-size: 9pt;
+    font-weight: bold;
+    font-size: 9pt;
 }
+
 dd {
-  margin: 0 0 0 40px;
-  padding: 0 0 10px 0;
+    margin: 0 0 0 40px;
+    padding: 0 0 10px 0;
 }
+
 
 /* PAGING PART */
+
 .paging {
-  background-color: #a2b964;
-  position: relative;
-  clear: both;
-  float: left;
-  margin-top: -12px;
-  width: 100%;
-  text-align: center;
+    background-color: #a2b964;
+    position: relative;
+    clear: both;
+    float: left;
+    margin-top: -12px;
+    width: 100%;
+    text-align: center;
 }
 
+
 /* VALADATOR PART */
+
 .validator {
-  position: relative;
-  float: right;
-  bottom: 0px;
+    position: relative;
+    float: right;
+    bottom: 0px;
 }
